fixed spacing and edit tweet buttons

--- a/frontend/src/components/EditTweet/EditTweet.css
+++ b/frontend/src/components/EditTweet/EditTweet.css
@@ -10,6 +10,9 @@
     outline: none;
     resize: none;
     caret-color: orangered;
+    text-align: center;
+    font-size: large;
+
 }
 #editTweetButton{
 
